# aqua-examples

./: LICENSE  readme.md
integration examples/python-selenium/: README.md  main.py  pyproject.toml
integration examples/python-selenium/.devcontainer/: Dockerfile  devcontainer.json
integration examples/python-selenium/aqua-scripts/: 01-setup  02-run
integration examples/python-selenium/aqua-scripts/powershell-agent/: 02-run.ps1
integration examples/python-selenium/aqua-scripts/unix-agent/: 02-run
python/: readme.md
python/python_aqua_client/: New-PythonAquaClient.ps1  README.md  Update-RequirementsFile.ps1  requirements.txt  swagger.json
python/python_aqua_client/aqua-rest-api-client/: pyproject.toml
python/python_aqua_client/aqua-rest-api-client/aqua_rest_api_client/models/: __init__.py  api_system_settings.py
python/python_project/: main.py  requirements.txt
python/python_project/create_test_execution/: readme.md  test_create_execution.py
python/python_project/upload_file_example/: main.py  readme.md
rest api examples/python-rest-api/: README.md  pyproject.toml  python-rest-api.py
