[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = ["Nils Wagener <nils@aqua-cloud.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.2.0"
geckodriver-autoinstaller = "^0.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
